--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <!-- Quiz Box -->
     <div id="categoria">
         <h1>Juego de preguntas</h1>
         <hr />
@@ -22,7 +21,9 @@
         <hr style="margin-top: 50px" />
 
         <footer>
-            <p id="progreso">Questions x of y</p>
+            <p id="progreso"></p>
+            <p id="dificultad"></p>
+            <input type="button" value="salir" id="salir">
         </footer>
     </div>
 
